--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="jop_posting_page.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">أضف وظيفة</a>
                         <a href="registration.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">تسجيل موظف</a>
               
-<a href="#" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200"> رسائلي</a>
+<a href="my_messages.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200"> رسائلي</a>
               
 
 
