--- a/index.html
+++ b/index.html
@@ -365,24 +365,24 @@
 
 
 
- <li><a href="no_code.html" class="text-gray-400 hover:text-white"> كود لا  له 2</a></li>
+ <li><a href="no_code.html" class="text-gray-400 hover:text-white"> كود لا  له </a></li>
 
 
 
- <li><a href=no_code2.html" class="text-gray-400 hover:text-white"> كود لا 3علاقة له بالموقع،للتجرب</a></li>
+ <li><a href=no_code2.html" class="text-gray-400 hover:text-white"> كود لا 2 له بالموقع،للتجرب</a></li>
 
 
 
- <li><a href="no_code3.html" class="text-gray-400 hover:text-white"> كود لا 4علاقة له بالموقع،للتجرب</a></li>
+ <li><a href="no_code3.html" class="text-gray-400 hover:text-white"> كود لا 3 له بالموقع،للتجرب</a></li>
 
 
 
 
- <li><a href="no_code4.html" class="text-gray-400 hover:text-white"> كود لا 5علاقة له بالموقع،للتجرب</a></li>
+ <li><a href="no_code4.html" class="text-gray-400 hover:text-white"> كود لا 4 له بالموقع،للتجرب</a></li>
 
 
 
- <li><a href="no_code5.html" class="text-gray-400 hover:text-white"> كود لا علاقة له بالموقع،للتجرب</a></li>
+ <li><a href="no_code5.html" class="text-gray-400 hover:text-white"> كود لا 5علاقة له بالموقع،للتجرب</a></li>
 
 
 
