--- a/no_code4.html
+++ b/no_code4.html
@@ -719,7 +719,8 @@
                 }
 
                 // 3. حفظ بيانات المستخدم في Firestore
-                const collectionName = role === 'employee' ? 'employees' : 'employers';
+                // 🚨 التعديل الرئيسي: استخدام All_jops للشركات
+                const collectionName = role === 'employee' ? 'employees' : '**All_jops**';
                 await setDoc(doc(db, collectionName, user.uid), userData);
 
                 showMessage('تم إنشاء حسابك بنجاح! سيتم توجيهك الآن.', 'success');
@@ -919,4 +920,3 @@
     </script>
 </body>
 </html>
- 
