--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="mr-4 hidden md:block">
-                    <a href="login.html" class="px-4 py-2 text-blue-600 font-medium border border-blue-600 rounded-lg hover:bg-blue-50 whitespace-nowrap">تسجيل الدخول</a>
+                    <a href="no_code4.html" class="px-4 py-2 text-blue-600 font-medium border border-blue-600 rounded-lg hover:bg-blue-50 whitespace-nowrap">تسجيل الدخول</a>
                 </div>
 
                 <button id="mobile-menu-button" class="md:hidden text-gray-600 focus:outline-none">
