--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شغلني - بوابة التوظيف العربية</title>
+    <title>شغلني - بوابة التوظيف السودانية</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -330,7 +330,7 @@
                         منصة "شغلني" هي الحل الأمثل للربط بين أصحاب المواهب وأصحاب العمل في العالم العربي. نسعى لتوفير بيئة سهلة وآمنة للبحث عن الوظائف المناسبة أو العثور على أفضل المواهب للانضمام إلى فريقك.
                     </p>
                     <p class="text-gray-600 text-lg">
-                        تأسست المنصة عام 2022 بمجموعة من المهنيين المتمرسين في مجال التوظيف والتقنية، بهدف تبسيط عملية البحث عن الوظائف وإدارتها في المنطقة العربية.
+                        تأسست المنصة عام 2025 بمجموعة من المهنيين المتمرسين في مجال التوظيف والتقنية، بهدف تبسيط عملية البحث عن الوظائف وإدارتها في المنطقة العربية.
                     </p>
                     <a href="about.us.html" class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded-full font-bold hover:bg-blue-700 transition duration-300">تعرف أكثر عنا</a>
                 </div>
@@ -343,7 +343,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/b2001a02-ac98-45f8-90b9-8fba81827ef0.png" alt="شعار شغلني" class="h-10 mb-4">
-                    <p class="text-gray-400">منصة التوظيف الأولى في العالم العربي</p>
+                    <p class="text-gray-400">منصة التوظيف الأولى في  السودان</p>
                     <div class="flex space-x-4 space-x-reverse mt-4">
                         <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter text-xl"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-linkedin text-xl"></i></a>
