--- a/index.html
+++ b/index.html
@@ -366,6 +366,26 @@
                         <li><a href="no_code5.html" class="text-gray-400 hover:text-white"> كود لا 5 علاقة له بالموقع،للتجرب</a></li>
                         <li><a href="no_code6.html" class="text-gray-400 hover:text-white"> كود لا علاقة له بالموقع،للت6جرب</a></li>
                         <li><a href="employee_inbox.html" class="text-gray-400 hover:text-white"> inbox</a></li>
+
+
+  <li><a href="no_code.a1.html" class="text-gray-400 hover:text-white"> no code a1</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     </ul>
                 </div>
                 <div>
