--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="md:w-1/2 md:mr-10">
                     <h2 class="text-3xl font-bold text-gray-800 mb-6">من نحن</h2>
                     <p class="text-gray-600 mb-4 text-lg">
-                        منصة "شغلني" هي الحل الأمثل للربط بين أصحاب المواهب وأصحاب العمل في العالم العربي. نسعى لتوفير بيئة سهلة وآمنة للبحث عن الوظائف المناسبة أو العثور على أفضل المواهب للانضمام إلى فريقك.
+                        منصة "شغلني" هي الحل الأمثل للربط بين أصحاب المواهب وأصحاب العمل ،  نسعى لتوفير بيئة سهلة وآمنة للبحث عن الوظائف المناسبة أو العثور على أفضل المواهب للانضمام إلى فريقك.
                     </p>
                     <p class="text-gray-600 text-lg">
                         تأسست المنصة عام 2025 بمجموعة من المهنيين المتمرسين في مجال التوظيف والتقنية، بهدف تبسيط عملية البحث عن الوظائف وإدارتها في المنطقة العربية.
@@ -393,7 +393,7 @@
                     <ul class="space-y-2">
                         <li class="text-gray-400"><i class="fas fa-envelope ml-2"></i> info@shgholny.com</li>
                         <li class="text-gray-400"><i class="fas fa-phone ml-2"></i> +966 12 345 6789</li>
-                        <li class="text-gray-400"><i class="fas fa-map-marker-alt ml-2"></i> الرياض، السعودية</li>
+                        <li class="text-gray-400"><i class="fas fa-map-marker-alt ml-2"></i> الخرطوم، السودان</li>
                     </ul>
                 </div>
                 <div>
