--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <nav class="container mx-auto px-6 py-3">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4c6ac0b9-d0f3-4546-89b8-cf881347ac80.png" alt="شعار موقع شغلني" class="h-10 mr-2">
+                    <img src="shagelnie.png.png" alt="شعار موقع شغلني" class="h-10 mr-2">
                     <span class="text-xl font-bold text-blue-600">شغلني</span>
                 </div>
 
